load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:prefix github.com/bio-routing/bio-rd
gazelle(
    name = "gazelle",
    external = "vendored",
    prefix = "github.com/bio-routing/bio-rd",
)

go_library(
    name = "go_default_library",
    srcs = [
        "main.go",
        "management.go",
    ],
    importpath = "github.com/bio-routing/bio-rd",
    visibility = ["//visibility:private"],
    deps = [
        "//config:go_default_library",
        "//net:go_default_library",
        "//proto:mgmt_go_proto",
        "//protocols/bgp/server:go_default_library",
        "//routingtable:go_default_library",
        "//routingtable/filter:go_default_library",
        "//routingtable/locRIB:go_default_library",
        "//vendor/github.com/sirupsen/logrus:go_default_library",
        "//vendor/google.golang.org/grpc:go_default_library",
        "//vendor/google.golang.org/grpc/codes:go_default_library",
        "//vendor/google.golang.org/grpc/reflection:go_default_library",
        "//vendor/google.golang.org/grpc/status:go_default_library",
    ],
)

go_binary(
    name = "bio-rd",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
