load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_path", "go_vet_test")
load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:prefix github.com/bio-routing/bio-rd
gazelle(
    name = "gazelle",
    external = "vendored",
    prefix = "github.com/bio-routing/bio-rd",
)

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/bio-routing/bio-rd",
    visibility = ["//visibility:private"],
    deps = [
        "//config:go_default_library",
        "//net:go_default_library",
        "//protocols/bgp/server:go_default_library",
        "//routingtable:go_default_library",
        "//routingtable/filter:go_default_library",
        "//routingtable/locRIB:go_default_library",
        "//vendor/github.com/sirupsen/logrus:go_default_library",
    ],
)

go_binary(
    name = "bio-rd",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

go_path(
    name = "all_srcs",
    deps = [
        "//:bio-rd",
    ],
)

go_vet_test(
    name = "vet",
    data = [":all_srcs"],
)
