load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "ip.go",
        "prefix.go",
    ],
    importpath = "github.com/bio-routing/bio-rd/net",
    visibility = ["//visibility:public"],
    deps = ["//net/api:go_default_library"],
)

go_test(
    name = "go_default_test",
    srcs = [
        "ip_test.go",
        "prefix_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "//net/api:go_default_library",
        "//vendor/github.com/stretchr/testify/assert:go_default_library",
    ],
)
