load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "bgp.go",
        "bgp_path_manager.go",
        "path.go",
        "route.go",
        "static.go",
    ],
    importpath = "github.com/bio-routing/bio-rd/route",
    visibility = ["//visibility:public"],
    deps = [
        "//net:go_default_library",
        "//vendor/github.com/taktv6/tflow2/convert:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "path_test.go",
        "route_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "//net:go_default_library",
        "//vendor/github.com/stretchr/testify/assert:go_default_library",
    ],
)
