load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/bio-routing/bio-rd/apps/bmp-streamer",
    visibility = ["//visibility:private"],
    deps = [
        "//apps/bmp-streamer/pkg/apiserver:go_default_library",
        "//apps/bmp-streamer/pkg/bmpsrvapi:go_default_library",
        "//apps/bmp-streamer/pkg/config:go_default_library",
        "//protocols/bgp/server:go_default_library",
        "@com_github_grpc_ecosystem_go_grpc_prometheus//:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
    ],
)

go_binary(
    name = "bmp-streamer",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
