load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "bio_net_proto",
    srcs = ["net.proto"],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "bio_net_go_proto",
    importpath = "github.com/bio-routing/bio-rd/net/api",
    proto = ":api_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "go_default_library",
    embed = [":bio_net_go_proto"],
    importpath = "github.com/bio-routing/bio-rd/net/api",
    visibility = ["//visibility:public"],
)

proto_library(
    name = "api_proto",
    srcs = ["net.proto"],
    visibility = ["//visibility:public"],
)
