load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "bio_route_proto",
    srcs = ["route.proto"],
    visibility = ["//visibility:public"],
    deps = ["//net/api:bio_net_proto"],
)

go_proto_library(
    name = "bio_route_go_proto",
    importpath = "github.com/bio-routing/bio-rd/route/api",
    proto = ":bio_route_proto",
    visibility = ["//visibility:public"],
    deps = ["//net/api:go_default_library"],
)

go_library(
    name = "go_default_library",
    embed = [":bio_route_go_proto"],
    importpath = "github.com/bio-routing/bio-rd/route/api",
    visibility = ["//visibility:public"],
)
