load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "api_proto",
    srcs = ["route.proto"],
    visibility = ["//visibility:public"],
    deps = ["//net/api:api_proto"],
)

go_proto_library(
    name = "api_go_proto",
    importpath = "github.com/bio-routing/bio-rd/route/api",
    proto = ":api_proto",
    visibility = ["//visibility:public"],
    deps = [
        "//net/api:go_default_library",
        "//vendor/github.com/golang/protobuf/proto:go_default_library",
    ],
)

go_library(
    name = "go_default_library",
    embed = [":api_go_proto"],
    importpath = "github.com/bio-routing/bio-rd/route/api",
    visibility = ["//visibility:public"],
)
