load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["adj_rib_in.go"],
    importpath = "github.com/bio-routing/bio-rd/routingtable/adjRIBIn",
    visibility = ["//visibility:public"],
    deps = [
        "//net:go_default_library",
        "//route:go_default_library",
        "//routingtable:go_default_library",
        "//routingtable/filter:go_default_library",
        "//vendor/github.com/sirupsen/logrus:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["adj_rib_in_test.go"],
    embed = [":go_default_library"],
    deps = [
        "//net:go_default_library",
        "//route:go_default_library",
        "//routingtable:go_default_library",
        "//routingtable/filter:go_default_library",
        "//vendor/github.com/stretchr/testify/assert:go_default_library",
    ],
)
