load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "adj_rib_out_add_path.go",
        "path_id_manager.go",
    ],
    importpath = "github.com/bio-routing/bio-rd/routingtable/adjRIBOutAddPath",
    visibility = ["//visibility:public"],
    deps = [
        "//net:go_default_library",
        "//route:go_default_library",
        "//routingtable:go_default_library",
        "//vendor/github.com/sirupsen/logrus:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["path_id_manager_test.go"],
    embed = [":go_default_library"],
    deps = ["//vendor/github.com/stretchr/testify/assert:go_default_library"],
)
