load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "action.go",
        "community_filter.go",
        "filter.go",
        "helper.go",
        "large_community_filter.go",
        "prefix_list.go",
        "prefix_matcher.go",
        "route_filter.go",
        "term.go",
        "term_condition.go",
    ],
    importpath = "github.com/bio-routing/bio-rd/routingtable/filter",
    visibility = ["//visibility:public"],
    deps = [
        "//net:go_default_library",
        "//protocols/bgp/types:go_default_library",
        "//route:go_default_library",
        "//routingtable/filter/actions:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "filter_test.go",
        "helper_test.go",
        "route_filter_test.go",
        "term_condition_test.go",
        "term_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "//net:go_default_library",
        "//protocols/bgp/types:go_default_library",
        "//route:go_default_library",
        "//routingtable/filter/actions:go_default_library",
        "//vendor/github.com/stretchr/testify/assert:go_default_library",
    ],
)
