load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["decoder.go"],
    importpath = "github.com/bio-routing/bio-rd/util/decoder",
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    srcs = ["decoder_test.go"],
    embed = [":go_default_library"],
    deps = ["//vendor/github.com/stretchr/testify/assert:go_default_library"],
)
