load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/bio-routing/bio-rd/apps/bmp-streamer/client",
    visibility = ["//visibility:private"],
    deps = [
        "//apps/bmp-streamer/pkg/bmpstreamer:go_default_library",
        "//net:go_default_library",
        "//net/api:go_default_library",
        "//vendor/github.com/sirupsen/logrus:go_default_library",
        "//vendor/google.golang.org/grpc:go_default_library",
    ],
)

go_binary(
    name = "client",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
