load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "aggregator.go",
        "as_path.go",
        "community.go",
        "large_community.go",
        "unknown_attribute.go",
    ],
    importpath = "github.com/bio-routing/bio-rd/protocols/bgp/types",
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    srcs = [
        "community_test.go",
        "large_community_benchmark_test.go",
        "large_community_test.go",
        "unknown_attrinute_test.go",
    ],
    embed = [":go_default_library"],
    deps = ["//vendor/github.com/stretchr/testify/assert:go_default_library"],
)
