load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "netlink.go",
        "route.go",
    ],
    importpath = "github.com/bio-routing/bio-rd/protocols/system/netlink",
    visibility = ["//visibility:public"],
    deps = [
        "//config:go_default_library",
        "//net:go_default_library",
        "//route:go_default_library",
        "//routingtable:go_default_library",
        "//routingtable/locRIB:go_default_library",
        "//vendor/github.com/sirupsen/logrus:go_default_library",
        "//vendor/github.com/vishvananda/netlink:go_default_library",
    ],
)
